plugins {
    id 'application'
    id 'java'
}

group = 'neurotik'
version = '1.0.0'

repositories {
    mavenCentral()
    maven { url = uri('https://jitpack.io') }
}

dependencies {
    implementation 'com.github.pho001:Synaptik:73bf331806bc3371767b95e39887a32af5793ee2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'neurotik.app.Main'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs '--add-modules=jdk.incubator.vector'
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs '--add-modules=jdk.incubator.vector'
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
